@@ -1,6 +1,6 @@
 {
     "name": "moonlet",
-    "version": "1.4.26",
+    "version": "1.4.27",
     "private": true,
     "scripts": {
         "generate-icons": "mkdir -p resources/fonts && icon-font-generator ./src/assets/icons/svg/*.svg -o resources/fonts --height 1024 --types ttf",
